--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "Actions": [
     {
-      "Icon": "./icons/Lol_icon",
+      "Icon": "./icons/icons/Lol_icon",
       "Name": "League of Legends",
       "States": [
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "middle",
           "FontSize": "9",
           "ShowTitle": true,
@@ -14,7 +14,7 @@
           "FontStyle": "Bold"
         },
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "bottom",
           "FontSize": "10",
           "ShowTitle": true,
@@ -27,12 +27,12 @@
       "Tooltip": "A Leauge API Addon that let you show Profile and Ingame Stuff",
       "UUID": "de.shiro.leauge.api.action"
     },
-	{
-      "Icon": "./icons/runeterra_icon",
+    {
+      "Icon": "./icons/icons/runeterra_icon",
       "Name": "Teamfight Tactics",
       "States": [
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "middle",
           "FontSize": "9",
           "ShowTitle": true,
@@ -41,7 +41,7 @@
           "FontStyle": "Bold"
         },
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "bottom",
           "FontSize": "10",
           "ShowTitle": true,
@@ -54,12 +54,12 @@
       "Tooltip": "2",
       "UUID": "de.shiro.tft.api.action"
     },
-	{
-      "Icon": "./icons/runeterra_icon",
+    {
+      "Icon": "./icons/icons/runeterra_icon",
       "Name": "Legends of Runeterra",
       "States": [
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "middle",
           "FontSize": "9",
           "ShowTitle": true,
@@ -68,7 +68,7 @@
           "FontStyle": "Bold"
         },
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "bottom",
           "FontSize": "10",
           "ShowTitle": true,
@@ -81,12 +81,12 @@
       "Tooltip": "A Leauge API Addon that let you show Profile and Ingame Stuff",
       "UUID": "de.shiro.lor.api.action"
     },
-	{
-      "Icon": "./icons/Valorant_icon",
+    {
+      "Icon": "./icons/icons/Valorant_icon",
       "Name": "VALORANT",
       "States": [
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "middle",
           "FontSize": "9",
           "ShowTitle": true,
@@ -95,7 +95,7 @@
           "FontStyle": "Bold"
         },
         {
-          "Image":  "./icons/leauge-api-icon",
+          "Image": "./icons/icons/leauge-api-icon",
           "TitleAlignment": "bottom",
           "FontSize": "10",
           "ShowTitle": true,
@@ -112,14 +112,14 @@
   "SDKVersion": 2,
   "Author": "Shiro",
   "Category": "Riot Games API",
-  "CategoryIcon": "./icons/riot-games-icon",
+  "CategoryIcon": "./icons/icons/riot-games-icon",
   "CodePath": "index.html",
-  "Description": "A Riot Games API Plugin that let you display information about LOL / LOR / VR / TF",
+  "Description": " It is an unofficial plugin that takes the Riot Games API to let you display information about LOL / LOR / VR / TF",
   "Name": "Riot Games API",
-  "Icon": "./icons/riot-games-icon",
+  "Icon": "./icons/icons/riot-games-icon",
   "URL": "https://github.com/Shiirroo/StreamDeck-RiotAPI",
-  "PropertyInspectorPath": "leauge.api.html",
-  "Version": "2.3",
+  "PropertyInspectorPath": "propertyInspector.html",
+  "Version": "0.1",
   "OS": [
     {
       "Platform": "windows",
