--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
       "UUID": "de.shiro.leauge.api.action"
     },
     {
-      "Icon": "./icons/icons/runeterra_icon",
+      "Icon": "./icons/icons/TFT_icon",
       "Name": "Teamfight Tactics",
       "States": [
         {
