--- a/manifest.json
+++ b/manifest.json
@@ -113,12 +113,12 @@
   "Author": "Shiro",
   "Category": "Riot Games API",
   "CategoryIcon": "./icons/icons/riot-games-icon",
-  "CodePath": "./js/index.html",
+  "CodePath": "./js/listener.html",
   "Description": " It is an unofficial plugin that takes the Riot Games API to let you display information about LOL / LOR / VR / TF",
   "Name": "Riot Games API",
   "Icon": "./icons/icons/riot-games-icon",
   "URL": "https://github.com/Shiirroo/StreamDeck-RiotAPI",
-  "PropertyInspectorPath": "./propertyInspector/index.html",
+  "PropertyInspectorPath": "./propertyInspector/pi.html",
   "Version": "0.1",
   "OS": [
     {
